# SpectreGate

./: .gitignore  Cargo.toml  README.md
spectregate-client/: Cargo.toml
spectregate-client/src/: main.rs
spectregate-core/: Cargo.toml
spectregate-core/src/: lib.rs
spectregate-daemon/: Cargo.toml
spectregate-daemon/src/: main.rs
test/: test_env.sh
