[workspace]
members = [
    "spectregate-core",
    "spectregate-client",
    "spectregate-daemon"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
chacha20 = "0.10.0"
rand = "0.10.1"
