[workspace]
members = [
    "spectregate-core",
    "spectregate-client",
    "spectregate-daemon"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4"
chacha20poly1305 = "0.10"
tokio = { version = "1.35", features = ["full"] }
rand = "0.10.1"
clap = {version="4.6.1", features = ["derive"]}
pcap = { version = "2.4.0", features = ["capture-stream"] }
futures = "0.3"
etherparse = "0.20.2"